cco.member: Python3 fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,10 +12,13 @@ keywords = ["loops"]
 authors = [{name = "Helmut Merz", email = "helmutm@cy55.de"}]
 
 dependencies = [
-	"loops"
+	"loops",
+	"requests",
 ]
 
 [project.optional-dependencies]
+
+jwt = ["python_jwt", "jwcrypto"]
 
 test = ["zope.testrunner"]
 
