add cyberapps package with 2 sub-packages, + Python3 fixes

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -18,9 +18,9 @@ dependencies = [
 
 [project.optional-dependencies]
 
-jwt = ["python_jwt", "jwcrypto"]
+jwt = ["python-jwt", "jwcrypto"]
 
 test = ["zope.testrunner"]
 
 [tool.setuptools]
-packages = ["cco"]
+packages = ["cco", "cyberapps"]
